# ts-agent

./: .gitignore  README.md  example.py  pyproject.toml
ts_agent/: graph.py  state.py
ts_agent/archetype_bank/: retrieval.py
ts_agent/nodes/: audit.py  executor.py  planner.py  prior.py  router.py
ts_agent/tools/: library.py
