[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ts-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "numpy>=1.26",
    "pydantic>=2.0",
    "dtw-python>=1.5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ipykernel"]

[tool.hatch.build.targets.wheel]
packages = ["ts_agent"]
